# MCAgent

./: .env.example  .gitignore  MEMORY.md  README.md  config.py  gui.py  install_server.py  main.py  models.py  orchestrator.py  pyproject.toml  pyrightconfig.json  pytest_out.txt  run_log.py
.cursor/rules/: minecraft-two-agent.mdc
agents/: __init__.py  base.py  plugin_manager.py  verifier.py
docs/: ARCHITECTURE.md
src/mcserver/: __init__.py  __main__.py  config.py  models.py
src/mcserver/agents/: __init__.py  base.py  parsing.py  plugin_manager.py  verifier.py
src/mcserver/api/: __init__.py  app.py  jobs.py  main.py
src/mcserver/cli/: __init__.py  gui.py  logging.py  main.py
src/mcserver/orchestrator/: __init__.py  report.py  routing.py  service.py
src/mcserver/tools/: __init__.py  catalog.py
src/mcserver/tools/plugins/: __init__.py  download.py  hangar.py  http.py  models.py  modrinth.py  resolver.py  spigot.py
src/mcserver/tools/process/: __init__.py  manager.py  rcon.py
src/mcserver/tools/registry/: __init__.py  plugin.py  verifier.py
tests/: __init__.py  conftest.py  fakes.py  test_install_cache.py  test_orchestrator.py  test_parsing.py  test_plugin_search.py  test_process.py  test_rollback_real_server.py  test_smoke.py
tools/: __init__.py  plugin_tools.py  stub_state.py  verifier_tools.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/components/: ResultCard.tsx
web/src/pages/: HistoryPage.tsx  PluginsPage.tsx  RequestPage.tsx  ServerPage.tsx
(+2 files in other folders)
