[project]
name = "minecraft-server"
version = "0.1.0"
description = "Two-agent Minecraft server management (DeepSeek Plugin Manager + Verifier)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "smolagents",
    "openai",
    "python-dotenv>=1.2.2",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
